[workspace]
members = [".", "query-params-macro"]

[package]
name = "to-query-params"
version = "0.0.3"
edition = "2021"
authors = ["Brendan Blanchard"]
description = "A procedural macro and trait for easy use of arbitrary structs as query parameters in Hyper"
license = "MIT"
repository = "https://github.com/Brendan-Blanchard/to-query-params"
keywords = ["hyper", "query", "params", "web", "http"]
categories = ["rust-patterns", "web-programming", "network-programming"]
exclude = [".idea", ".gitignore", ".github"]

[dependencies]
query-params-macro = { version = "0.0.3", path = "query-params-macro" }
urlencoding = "2.1.3"

[dev-dependencies]
trybuild = "1.0.85"
