[package]
name = "query-params-macro"
version = "0.1.0"
edition = "2024"
authors = ["Brendan Blanchard"]
description = "A procedural macro for easy use of arbitrary structs as query parameters in Hyper"
license = "MIT"
repository = "https://github.com/Brendan-Blanchard/to-query-params"
keywords = ["hyper", "query", "params", "web", "http"]
categories = ["rust-patterns", "web-programming", "network-programming"]
exclude = [".idea", ".gitignore", ".github"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0.41"
syn = { version = "2.0.107", features = ["full"] }
